feat: repository를 jpa로 변경